--- a/Compressed/Alienware.html
+++ b/Compressed/Alienware.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop</title>
+    <title>Laptop</title>
     <link rel="icon" type="image/x-icon" href="c:\Users\cated\Documents\wow code\pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -34,15 +34,15 @@
 <div class="small-contrainer">
   <div class="row">
     <div class="col-2">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png" width="70%" style="transform: translate(70px);">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\alienware2-removebg-preview.png" width="70%" style="transform: translate(70px);">
     </div>
     <div class="col-2">
       <p>Laptop</p>
-      <h1>Acer NH.Q2QAA.012 Nitro 5</h1>
-      <h4>$999.00</h4>
+      <h1>Alienware M15 R7 Gaming Laptop</h1>
+      <h4>$2,095.00</h4>
       <a href="" class="btn">Add To Cart</a>
       <h3>Product Details</h3>
-      <p>7th Gen Intel Core i5-7300HQ, GeForce GTX 1050 Ti, 16GB DDR4, 256GB SSD, 1TB HDD, Win 10 Home, Shale Black, AN515-51-53W5</p>
+      <p>15.6 inch QHD 240Hz 2ms Display, AMD Ryzen R7 6800H, GeForce RTX 3070Ti, 32GB DDR5 RAM, 1TB NVMe SSD, USB-C, Wi-Fi 6, RGB LED Lighting, Windows 11, Black</p>
     </div>
   </div>
 </div>
@@ -67,9 +67,9 @@
         </div>
         <div class="col-3">
           <a href="Acernitro.html">
-          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png">
-          <p class="price"><strong>Acer NH.Q2QAA.012 Nitro 5</strong><br>$999.00</p>
-        </a>
+            <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png">
+            <p class="price"><strong>Acer NH.Q2QAA.012 Nitro 5</strong><br>$999.00</p>
+          </a>
         </div>
       </div>
   </div>
