--- a/Compressed/Acernitro.html
+++ b/Compressed/Acernitro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop</title>
+    <title>Laptop</title>
     <link rel="icon" type="image/x-icon" href="c:\Users\cated\Documents\wow code\pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -34,17 +34,15 @@
 <div class="small-contrainer">
   <div class="row">
     <div class="col-2">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\Cuplikan_layar_2024-01-19_185444-removebg-preview.png" width="70%" style="transform: translate(70px);">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png" width="70%" style="transform: translate(70px);">
     </div>
     <div class="col-2">
-      <p>Accessories</p>
-      <h1>Fantech Raigor</h1>
-      <h4>$1.82
-      </h4>
+      <p>Laptop</p>
+      <h1>Acer NH.Q2QAA.012 Nitro 5</h1>
+      <h4>$999.00</h4>
       <a href="" class="btn">Add To Cart</a>
       <h3>Product Details</h3>
-      <p>Embrace wireless freedom with the Fantech Raigor II WG10 Gaming Mouse. Dressed in Black, Red, and Gray, it boasts precision and style.<br> Elevate your gaming experience with customizable features and ergonomic design. Unleash the gaming prowess with this sleek and responsive wireless mouse.
-        </p>
+      <p>7th Gen Intel Core i5-7300HQ, GeForce GTX 1050 Ti, 16GB DDR4, 256GB SSD, 1TB HDD, Win 10 Home, Shale Black, AN515-51-53W5</p>
     </div>
   </div>
 </div>
@@ -53,27 +51,28 @@
 <!-------- featured categories -------->
 <div class="categories">
 
-  <div class="row">
-    <div class="col-3">
-      <a href="Headset.html">
-        <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\headset.png">
-        <p class="price"><strong>MC N1A computer/gaming headset</strong><br>$34.97</p>
-      </a>
-    </div>
-    <div class="col-3">
-      <a href="Fantect.html">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\Cuplikan_layar_2024-01-19_185444-removebg-preview.png">
-      <p class="price"><strong>Fantech Gaming Mouse Wireless 2000DPI</strong><br>$1.82</p>
-    </a>
-    </div>
-    <div class="col-3">
-      <a href="Magee.html">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\halfkeyboard-removebg-preview.png">
-      <p class="price"><strong>MageGee One Handed Professional Gaming Keyboard</strong><br>$19.99</p>
-    </a>
-    </div>
+    <div class="small-container">
+      <div class="row">
+        <div class="col-3">
+          <a href="Asus Rog.html">
+          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\rogstix.png">
+          <p class="price"><strong>ASUS ROG Strix Scar 16</strong><br>$2,999.99</p>
+          </a>
+        </div>
+        <div class="col-3">
+          <a href="Alienware.html">
+            <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\alienware2-removebg-preview.png">
+            <p class="price"><strong>Alienware m15 R7 15.6" Gaming Laptop</strong><br>$2,095.00</p>
+              </a>
+        </div>
+        <div class="col-3">
+          <a href="Acernitro.html">
+          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png">
+          <p class="price"><strong>Acer NH.Q2QAA.012 Nitro 5</strong><br>$999.00</p>
+        </a>
+        </div>
+      </div>
   </div>
-</div>
 
 <!-------- footer -------->
 
