--- a/Compressed/Asus Rog.html
+++ b/Compressed/Asus Rog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop</title>
+    <title>Laptop</title>
     <link rel="icon" type="image/x-icon" href="c:\Users\cated\Documents\wow code\pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -29,82 +29,50 @@
     </div>
 </div>
 
-<!------cart item details-->
-<div class="small-container cart-page">
+<!-----single product :C-->
 
-<table>
-  <tr>
-    <th id="product" ><center>Product</center></th>
-    <th id="product">Quantity</th>
-    <th id="product">Subtotal</th>
-  </tr>
-  <tr>
-    <td>
-      <div class="cart-info">
-        <img src="c:\Users\cated\Documents\wow code\pictures\rogstix.png" width="60%" style="transform: translate(60px);" class="cart-image">
+<div class="small-contrainer">
+  <div class="row">
+    <div class="col-2">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\rogstix.png" width="70%" style="transform: translate(70px);">
+    </div>
+    <div class="col-2">
+      <p>Laptop</p>
+      <h1>ASUS ROG Strix Scar 16</h1>
+      <h4>$2,999.99</h4>
+      <a href="" class="btn">Add To Cart</a>
+      <h3>Product Details</h3>
+      <p>Gaming Laptop, 16” Nebula HDR QHD 240Hz/3ms, 1100 nits, Mini LED,<br> GeForce RTX 4080, Intel Core i9-13980HX, 32GB DDR5, 1TB PCIe, Wi-Fi 6E,<br> Windows 11 Pro,G634JZ-XS96,Black</p>
+    </div>
+  </div>
+</div>
+
+
+<!-------- featured categories -------->
+<div class="categories">
+
+    <div class="small-container">
+      <div class="row">
+        <div class="col-3">
+          <a href="Asus Rog.html">
+          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\rogstix.png">
+          <p class="price"><strong>ASUS ROG Strix Scar 16</strong><br>$2,999.99</p>
+          </a>
+        </div>
+        <div class="col-3">
+          <a href="Alienware.html">
+          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\alienware2-removebg-preview.png">
+          <p class="price"><strong>Alienware m15 R7 15.6" Gaming Laptop</strong><br>$2,095.00</p>
+            </a>
+        </div>
+        <div class="col-3">
+          <a href="Acernitro.html">
+            <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png">
+            <p class="price"><strong>Acer NH.Q2QAA.012 Nitro 5</strong><br>$999.00</p>
+          </a>
+        </div>
       </div>
-      <p id="ASUS">ASUS ROG Strix Scar 16</p>
-      <small id="ASUS">Price: $2,999.99</small>
-      <br>
-      <a href="" id="ASUS">Remove</a>
-    </div>
-    </div>
-    </td>
-    <td><input type="number" value="1"></td>
-    <td id="price">$2,999.99</td>
-  </tr>
-</tr>
-<tr>
-  <td>
-    <div class="cart-info">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\headset.png" width="60%" style="transform: translate(60px);" class="cart-image">
-    </div>
-    <p id="ASUS">Wired Gaming Headset For Pc</p>
-    <small id="ASUS">Price: $34.97</small>
-    <br>
-    <a href="" id="ASUS">Remove</a>
   </div>
-  </div>
-  </td>
-  <td><input type="number" value="1"></td>
-  <td id="price">$34.97</td>
-</tr>
-</tr>
-<tr>
-  <td>
-    <div class="cart-info">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\Cuplikan_layar_2024-01-19_185444-removebg-preview.png" width="60%" style="transform: translate(60px);" class="cart-image">
-    </div>
-    <p id="ASUS">Fantech Gaming Mouse Wireless 2000DPI</p>
-    <small id="ASUS">Price: $1.82</small>
-    <br>
-    <a href="" id="ASUS">Remove</a>
-  </div>
-  </div>
-  </td>
-  <td><input type="number" value="1"></td>
-  <td id="price">$1.82</td>
-</tr>
-</table>
-
-<div class="total-price">
-<table>
-  <tr>
-    <td>Subtotal</td>
-    <td>$3,036.78</td>
-  </tr>
-  <tr>
-    <td>Delivery fee</td>
-    <td>$10.00</td>
-  </tr>
-  <tr>
-    <td>Total</td>
-    <td>$3,046.78</td>
-  </tr>
-</table>
-</div>
-
-</div>
 
 <!-------- footer -------->
 
