--- a/Compressed/Fantect.html
+++ b/Compressed/Fantect.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop</title>
+    <title>Accesories</title>
     <link rel="icon" type="image/x-icon" href="c:\Users\cated\Documents\wow code\pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -34,15 +34,17 @@
 <div class="small-contrainer">
   <div class="row">
     <div class="col-2">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\alienware2-removebg-preview.png" width="70%" style="transform: translate(70px);">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\Cuplikan_layar_2024-01-19_185444-removebg-preview.png" width="70%" style="transform: translate(70px);">
     </div>
     <div class="col-2">
-      <p>Laptop</p>
-      <h1>Alienware M15 R7 Gaming Laptop</h1>
-      <h4>$2,095.00</h4>
+      <p>Accessories</p>
+      <h1>Fantech Raigor</h1>
+      <h4>$1.82
+      </h4>
       <a href="" class="btn">Add To Cart</a>
       <h3>Product Details</h3>
-      <p>15.6 inch QHD 240Hz 2ms Display, AMD Ryzen R7 6800H, GeForce RTX 3070Ti, 32GB DDR5 RAM, 1TB NVMe SSD, USB-C, Wi-Fi 6, RGB LED Lighting, Windows 11, Black</p>
+      <p>Embrace wireless freedom with the Fantech Raigor II WG10 Gaming Mouse. Dressed in Black, Red, and Gray, it boasts precision and style.<br> Elevate your gaming experience with customizable features and ergonomic design. Unleash the gaming prowess with this sleek and responsive wireless mouse.
+        </p>
     </div>
   </div>
 </div>
@@ -51,28 +53,27 @@
 <!-------- featured categories -------->
 <div class="categories">
 
-    <div class="small-container">
-      <div class="row">
-        <div class="col-3">
-          <a href="Asus Rog.html">
-          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\rogstix.png">
-          <p class="price"><strong>ASUS ROG Strix Scar 16</strong><br>$2,999.99</p>
-          </a>
-        </div>
-        <div class="col-3">
-          <a href="Alienware.html">
-            <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\alienware2-removebg-preview.png">
-            <p class="price"><strong>Alienware m15 R7 15.6" Gaming Laptop</strong><br>$2,095.00</p>
-              </a>
-        </div>
-        <div class="col-3">
-          <a href="Acernitro.html">
-            <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png">
-            <p class="price"><strong>Acer NH.Q2QAA.012 Nitro 5</strong><br>$999.00</p>
-          </a>
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-3">
+      <a href="Headset.html">
+        <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\headset.png">
+        <p class="price"><strong>MC N1A computer/gaming headset</strong><br>$34.97</p>
+      </a>
+    </div>
+    <div class="col-3">
+      <a href="Fantect.html">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\Cuplikan_layar_2024-01-19_185444-removebg-preview.png">
+      <p class="price"><strong>Fantech Gaming Mouse Wireless 2000DPI</strong><br>$1.82</p>
+    </a>
+    </div>
+    <div class="col-3">
+      <a href="Magee.html">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\halfkeyboard-removebg-preview.png">
+      <p class="price"><strong>MageGee One Handed Professional Gaming Keyboard</strong><br>$19.99</p>
+    </a>
+    </div>
   </div>
+</div>
 
 <!-------- footer -------->
 
