--- a/Compressed/razer.html
+++ b/Compressed/razer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop</title>
+    <title>Accesories</title>
     <link rel="icon" type="image/x-icon" href="c:\Users\cated\Documents\wow code\pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -34,15 +34,17 @@
 <div class="small-contrainer">
   <div class="row">
     <div class="col-2">
-      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\rogstix.png" width="70%" style="transform: translate(70px);">
+      <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\razerrr-removebg-preview.png" width="70%" style="transform: translate(70px);">
     </div>
     <div class="col-2">
-      <p>Laptop</p>
-      <h1>ASUS ROG Strix Scar 16</h1>
-      <h4>$2,999.99</h4>
+      <p>Accessories</p>
+      <h1>Razer Viper V3 HyperSpeed</h1>
+      <h4>$69.99
+      </h4>
       <a href="" class="btn">Add To Cart</a>
       <h3>Product Details</h3>
-      <p>Gaming Laptop, 16” Nebula HDR QHD 240Hz/3ms, 1100 nits, Mini LED,<br> GeForce RTX 4080, Intel Core i9-13980HX, 32GB DDR5, 1TB PCIe, Wi-Fi 6E,<br> Windows 11 Pro,G634JZ-XS96,Black</p>
+      <p>82 g Lightweight Design, Razer™ Focus Pro 30K Optical Sensor, Up to 280 hours of Battery Life
+        </p>
     </div>
   </div>
 </div>
@@ -51,27 +53,27 @@
 <!-------- featured categories -------->
 <div class="categories">
 
-    <div class="small-container">
-      <div class="row">
-        <div class="col-3">
-          <a href="Asus Rog.html">
-          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\rogstix.png">
-          <p class="price"><strong>ASUS ROG Strix Scar 16</strong><br>$2,999.99</p>
-          </a>
-        </div>
-        <div class="col-3">
-          <a href="Alienware.html">
-          <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\alienware2-removebg-preview.png">
-          <p class="price"><strong>Alienware m15 R7 15.6" Gaming Laptop</strong><br>$2,095.00</p>
-            </a>
-        </div>
-        <div class="col-3">
-          <a href="Acernitro.html">
-            <img src="c:\Users\cated\Documents\sam folder\code\website\website\pictures\nitro.png">
-            <p class="price"><strong>Acer NH.Q2QAA.012 Nitro 5</strong><br>$999.00</p>
-          </a>
-        </div>
+  <div class="small-container">
+    <div class="row">
+      <div class="col-3">
+        <a href="CLXSetGamingPC.html">
+        <img src="pictures/6544421_sd-removebg-preview.png">
+        <p class="price"><strong>CLX Set Gaming PC</strong><br>$3,199.99</p>
+      </a>
       </div>
+      <div class="col-3">
+        <a href="Playerone.html">
+        <img src="pictures/1697774402-player-one-base-ww-10-05-23-hero-white-badge.png">
+        <p class="price"><strong>Player One</strong><br>$749.00</p>
+      </a>
+      </div>
+      <div class="col-3">
+        <a href="TGMS.html">
+        <img src="pictures/6473613_sd-removebg-preview.png">
+        <p class="price"><strong>CLX Set TGMSETRTH1658BM Gaming Desktop</strong><br>$5,826.94</p>
+      </a>
+      </div>
+    </div>
   </div>
 
 <!-------- footer -------->
