--- a/Compressed/Accesories.html
+++ b/Compressed/Accesories.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accesories</title>
+    <title>TechIT</title>
     <link rel="icon" type="image/x-icon" href="c:\Users\cated\Documents\wow code\pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
