--- a/Newer/index.html
+++ b/Newer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop</title>
+    <title>TechIT</title>
     <link rel="icon" type="image/x-icon" href="pictures\gadgetmatch-asus-rog-20180513.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -24,39 +24,30 @@
                 <li><a href="laptop.html">Laptop</a></li>
         </ul>
         </nav>
-        <a href="cart.html"><img src="pictures\shopping-cart-logo-icon-shopping-cart-removebg-preview.png" width="30px" height="30px"></a>        
-        <img src="pictures\menu.png" class="menu-icon" onclick="menutoggle()">
+        <a href="cart.html"><img src="pictures\shopping-cart-logo-icon-shopping-cart-removebg-preview.png" width="30px" height="30px"></a>
+        
+        <img src="c:\Users\cated\Documents\wow code\pictures\menu.png" class="menu-icon" onclick="menutoggle()">
     </div>
-</div>
-
-<!-----single product :C-->
-
-<div class="small-contrainer">
-  <div class="row">
-    <div class="col-2">
-      <img src="pictures\6544421_sd-removebg-preview.png" width="70%" style="transform: translate(70px);">
-    </div>
-    <div class="col-2">
-      <p>Desktop</p>
-      <h1>CLX Set Gaming Pc</h1>
-      <h4>$749.00</h4>
-      <a href="" class="btn">Add To Cart</a>
-      <h3>Product Details</h3>
-      <p>Intel Core i9-13900KF - 64GB Memory - NVIDIA GeForce RTX 4070 - 2TB NVMe M.2 SSD + 6TB HDD - Black
-        </p>
+    <div class="row">
+      <div class="col-2">
+        <h1 class="enchance">Enhance Your Gaming</h1>
+        <p class="enchance">Be The Best</p>
+        <a href="laptop.html" class="btn">Go To Store &#8594;</a>
+      </div>
+      <div class="col-2">
+        <img src="pictures\Gaming-PC-vs-Laptop-Which-is-Worth-It.png">
     </div>
   </div>
 </div>
 
-
 <!-------- featured categories -------->
 <div class="categories">
+  <h1 class="title">Product</h1>
 
   <div class="small-container">
     <div class="row">
       <div class="col-3">
-        <a href="CLXSetGamingPC.html">
-        <img src="pictures/6544421_sd-removebg-preview.png">
+        <a href="CLXSetGamingPC.html"><img src="pictures/6544421_sd-removebg-preview.png">
         <p class="price"><strong>CLX Set Gaming PC</strong><br>$3,199.99</p>
       </a>
       </div>
@@ -75,6 +66,27 @@
     </div>
   </div>
 
+</div>
+<!--------- offer ----------->
+<div class="offer">
+  <div class="small-container">
+    <div class="row">
+      <div class="razerimg">
+        <img src="pictures\razer.png" class="razerimg" >
+      </div>
+      <div class="col-2">
+        <p>Best Mouse For Gaming</p>
+        <h1>Razer Viper V3 HyperSpeed</h1>
+        <small>82 g Lightweight Design
+          Razer™ Focus Pro 30K Optical Sensor
+          Up to 280 hours of Battery Life
+          </small> <br>
+          <a href="razer.html" class="btn">Buy Now &#8594;</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-------- footer -------->
 
 <div class="footer">
@@ -91,6 +103,8 @@
           <li>X(Twitter) - @TechIT</li>
           <li>Instagram - </li>
           <li>LinkdIn</li>
+
+
         </ul>
       </div>
     </div>
